# RBR-spirvpatcher-for-GTR2

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: build.yml
src/: multiviewpatcher.cpp
